# Infinity

./: .gitignore  AGENTS.md  BuildAndroid.bat  InfinityFighter.uproject  InfinityShooter_ServerArchitecture.docx  README.md
Config/: DefaultEngine.ini  DefaultGame.ini
Config/Android/: AndroidEngine.ini  AndroidGame.ini  AndroidInput.ini
Content/: ASDAM_DocterSkill1.uasset  ASDDoctorStrange_TimeTravel-_Clipchamp_2_Unreal5_6_Anim.uasset
Content/Anim/: 1_Unreal5_5_Anim.uasset  Am_IronDamaged.uasset  (+14 more)
InfinityServer/: InfinityServer.md  run_local_mysql.ps1  run_local_mysql_with_mfc.bat  run_local_mysql_with_mfc.ps1
Source/: InfinityFighter.Target.cs  InfinityFighterEditor.Target.cs
docs/: Build ID.txt  README.md  server-implementation-roadmap.md
tools/TcpUdpSimulator/: CMakeLists.txt  README.md  rebuild.ps1
tools/TcpUdpSimulator/docs/: architecture.md  packet-spec.md  test-scenarios.md
tools/TcpUdpSimulator/include/App/: SimulatorApp.h
tools/TcpUdpSimulator/include/Core/: LogSink.h  PacketParser.h  PacketSerializer.h  RingBuffer.h  WinsockContext.h
tools/TcpUdpSimulator/include/Packet/: CommandPacket.h  DeviceStatePacket.h  PacketHeader.h
tools/TcpUdpSimulator/include/Tcp/: Session.h  TcpClient.h  TcpServer.h
tools/TcpUdpSimulator/include/Udp/: UdpBroadcaster.h  UdpListener.h
tools/TcpUdpSimulator/src/App/: SimulatorApp.cpp
tools/TcpUdpSimulator/src/Tcp/: TcpClient.cpp  TcpServer.cpp
tools/TcpUdpSimulator/src/Udp/: UdpBroadcaster.cpp  UdpListener.cpp
tools/TcpUdpSimulator/tests/: PacketParserTests.cpp  TcpLoopbackTests.cpp  UdpBroadcastTests.cpp
(+1223 files in other folders)
